Fix button and icon alignments

--- a/src/documents/guideguide/css/_forms.scss
+++ b/src/documents/guideguide/css/_forms.scss
@@ -90,7 +90,7 @@ input, textarea {
 
   .button {
     display: table-cell;
-    padding: 5px 10px;
+    padding: 4px 10px 6px;
     vertical-align: middle;
     text-align: center;
     white-space: nowrap;
@@ -105,7 +105,10 @@ input, textarea {
     .is-showing-new-set-form &.add-set { display: none; }
   }
 
-  .icon-button { line-height: 0; }
+  .icon-button {
+    line-height: 0;
+    padding: 5px 10px;
+  }
 }
 
 // A basic input. This is required to be able to do 100% width AND have
